# DystopianCeoSimulator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  ci-pr.sh
.github/workflows/: continuous_deployment.yml
client/: Cargo.toml
client/src/: main.rs
client/src/systems/: connection_resources.rs  mod.rs  process_poll_connection_state.rs  process_server_events.rs  send_client_commands.rs  setup_client_state.rs  setup_connection_resources.rs  setup_pending_client_message.rs  setup_pending_player_action.rs
input/input-api/: Cargo.toml
input/input-api/src/: lib.rs
input/input-crossterm/: Cargo.toml
input/input-crossterm/src/: lib.rs
launcher/: Cargo.toml
launcher/src/: main.rs  server_guard.rs
renderer/renderer-api/: Cargo.toml
renderer/renderer-api/src/: lib.rs
renderer/renderer-ratatui/: Cargo.toml
renderer/renderer-ratatui/src/: input.rs  lib.rs  navigation.rs  org_detailed_view.rs  org_view.rs  plugin.rs  renderer.rs  routes.rs  system.rs
renderer/renderer-ratatui/src/dashboard_viewer/: input.rs  mod.rs  navigation.rs  renderer.rs  routes.rs
renderer/renderer-ratatui/src/dashboard_viewer/views/: mod.rs  render.rs  render_entities.rs  render_entity_view.rs  render_financials_chart.rs  render_perception_chart.rs  render_satisfaction_chart.rs
renderer/renderer-ratatui/src/operator/: input.rs  mod.rs  navigation.rs  renderer.rs  routes.rs
renderer/renderer-ratatui/src/operator/views/: organization_budget.rs  organization_details.rs  organization_hiring.rs  organization_list.rs  organization_view.rs  render.rs
renderer/renderer-ratatui/src/views/: mod.rs  organization_budget.rs  organization_details.rs  organization_hiring.rs  organization_list.rs  organization_view.rs  render.rs
server/: Cargo.toml
server/src/: cli.rs  internal_commands.rs  main.rs
server/src/deterministic_randomization/: company_names.rs  employee_types.rs  human_names.rs  human_types.rs  mod.rs  organization_chart.rs  organization_names.rs  organization_types.rs  pet_names.rs  pet_type.rs
server/src/game_management/: file_system_game_manager.rs  game_manager.rs  game_service.rs  mod.rs
server/src/plugins/: async_std_ready_signal.rs  mod.rs
server/src/systems/: connection_resources.rs  create_empty_world_state.rs  mod.rs  process_advance_week.rs  process_broadcast_world_state.rs  process_clear_needs_state_update.rs  process_client_commands.rs  process_command_log.rs  process_commands.rs  process_company_updates.rs  process_event_log.rs  process_events.rs  process_fan_out_commands.rs  process_fan_out_events.rs  process_internal_commands.rs  process_internal_events.rs  process_log_commands.rs  process_organization_updates.rs  process_print_active_connections.rs  redrive_event_logs.rs  send_server_commands.rs  setup_command_log.rs  setup_command_log_replay.rs  setup_connection_resources.rs  setup_event_log.rs  setup_fan_out_commands.rs  setup_fan_out_events.rs  setup_fanout_system.rs  setup_redrive_command_log.rs  setup_redrive_event_log.rs  setup_world_state.rs  sync_world_state.rs
service/game-metadata/: Cargo.toml
service/game-metadata/src/: main.rs  routes.rs
service/game-metadata/src/game_management/: file_system_game_manager.rs  game_service.rs
shared/: Cargo.toml
shared/src/: client_args.rs  components.rs  game_data.rs  history_data.rs  lib.rs  resources.rs
