[package]
name = "client"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bincode = "1.3.3"
shared = { path = "../shared" }
input-api = { path = "../input/input-api" }
renderer-ratatui = { path = "../renderer/renderer-ratatui" }
input-crossterm = { path = "../input/input-crossterm" }
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
async-channel = "2.3.1"
async-std = "1.6.2"
futures = "0.3.31"
uuid = { version = "1.12.1", features = ["v4"] }
byteorder = "1.5.0"

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = [
    "multi_threaded",
]
