[package]
name = "launcher"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
server = { path = "../server" }
client = { path = "../client" }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
tokio = { version = "1.44.0" , features = ["rt", "rt-multi-thread", "time", "process", "io-util", "macros", "signal", "net"] }
anyhow = "1.0.97"
