[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
shared = { path = "../shared" }
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
async-channel = "2.3.1"
async-std = "1.6.2"
futures = "0.3.31"
uuid = { version = "1.12.1", features = ["v4", "serde"] }

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = [
    "multi_threaded",
]
