[package]
name = "server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
shared = { path = "../shared" }
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
async-channel = "2.3.1"
async-std = "1.6.2"
futures = "0.3.31"
uuid = { version = "1.12.1", features = ["v4", "v5", "serde"] }
serde_json = "1.0.140"
chrono = "0.4.41"
clap = { version = "4.5", features = ["derive"] }
byteorder = "1.5.0"
rand = "0.8.5"
sha2 = "0.11.0-pre.5"

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = [
    "multi_threaded",
]
