[package]
name = "shared"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.12.1", features = ["v4", "serde"] }
clap = { version = "4.5.38", features = ["derive"] }

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = []
