[package]
name = "renderer-api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
shared = { path = "../../shared" }
input-api = { path = "../../input/input-api" }
uuid = { version = "1.12.1", features = ["v4"] }

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = []
