[package]
name = "renderer-ratatui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
renderer-api = { path = "../renderer-api" }
input-api = { path = "../../input/input-api" }
shared = { path = "../../shared" }
ratatui = "0.29.0"
tracing = "0.1.41"
uuid = { version = "1.12.1", features = ["v4"] }
rand = "0.8.5"

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = [

]
