[package]
name = "game-metadata"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
shared = { path = "../../shared" }
axum = { version = "0.8.4", features = ["macros", "tokio"] }
uuid = { version = "1.12.1", features = ["v4", "v5", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
anyhow = "1.0.98"
async-trait = "0.1.88"
serde_json = "1.0.140"
hyper = "0.14.32"
